--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <a href="https://shopee.ph/marissearenascayabyab" target="_blank" class="hero-btn1">SHOP NOW</a>
         </div>
         <div class="right">
-            <video controls src="images/videos/pocket type1.mp4">POCKET TYPE</video>
+            <video controls autoplay muted loop src="images/videos/pocket type1.mp4">POCKET TYPE</video>
         </div>
     </div>
     <div class="container reverse">
@@ -88,7 +88,7 @@
             <a href="https://shopee.ph/marissearenascayabyab" target="_blank" class="hero-btn1">SHOP NOW</a>
         </div>
         <div class="right">
-            <video controls src="images/videos/envelope type1.mp4">POCKET TYPE</video>
+            <video controls autoplay muted loop src="images/videos/envelope type1.mp4">POCKET TYPE</video>
         </div>
     </div>
     <div class="container">
@@ -99,7 +99,7 @@
             <a href="https://shopee.ph/marissearenascayabyab" target="_blank" class="hero-btn1">SHOP NOW</a>
         </div>
         <div class="right">
-            <video controls src="images/videos/trifold type1.mp4">POCKET TYPE</video>
+            <video controls autoplay muted loop src="images/videos/trifold type1.mp4">POCKET TYPE</video>
         </div>
     </div>
     <div class="container reverse">
@@ -110,7 +110,7 @@
             <a href="https://shopee.ph/marissearenascayabyab" target="_blank" class="hero-btn1">SHOP NOW</a>
         </div>
         <div class="right">
-            <video controls src="images/videos/allgold.mp4">POCKET TYPE</video>
+            <video controls autoplay muted loop src="images/videos/allgold.mp4">POCKET TYPE</video>
         </div>
     </div>
 
