--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     <div class="row">
         <div class="course-col">
             <h3>First Page</h3>
-            <p>- Name of the Groom<br>- Name of the Bride<br>- Date and Time of the Wedding<br>- Church and Address<br>- Reception and Adress<br>- Bible Verse (Optional)</p>
+            <p>- Name of the Groom<br>- Name of the Bride<br>- Date and Time of the Wedding<br>- Church and Address<br>- Reception and Address<br>- Bible Verse (Optional)</p>
         </div>
         <div class="course-col">
             <h3>Second Page</h3>
